--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>newblog</title>
   </head>
-  <body style="margin: 0%;">
+  <body style="margin: 0%;  box-sizing: border-box;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
